--- a/classes/HelloWorld.cls
+++ b/classes/HelloWorld.cls
@@ -1,6 +1,6 @@
 public class HelloWorld {
     public static String sayHello(String name) {
-        // This method will simply greet the user
+        // This method will simply greet the user 123
         // with his name
         return 'Hello, ' + name + '!';
     }
