US-0036032: Vijay: Apex classes

--- a/classes/AccountUtils.cls
+++ b/classes/AccountUtils.cls
@@ -1,3 +1,8 @@
 public class AccountUtils {
-
+    public static Boolean isAccountActive(Account acc) {
+        if (acc != null) {
+            return true;
+        }
+        return false;
+    }
 }
