--- a/classes/MathUtils.cls
+++ b/classes/MathUtils.cls
@@ -1,3 +1,5 @@
 public class MathUtils {
-
+    public static Integer addNumbers(Integer num1, Integer num2) {
+        return num1 + num2;
+    }
 }
