--- a/classes/StringUtils.cls
+++ b/classes/StringUtils.cls
@@ -1,3 +1,9 @@
 public class StringUtils {
-
+    public static String reverseString(String input) {
+        String reversed = '';
+        for (Integer i = input.length() - 1; i >= 0; i--) {
+            reversed += input.charAt(i);
+        }
+        return reversed;
+    }
 }
