US-0036036: Vijay: Account util update

--- a/classes/AccountUtils.cls
+++ b/classes/AccountUtils.cls
@@ -1,7 +1,7 @@
 public class AccountUtils {
     public static Boolean isAccountActive(Account acc) {
         if (acc != null) {
-            return true;
+            return true; // account is active
         }
         return false;
     }
