--- a/classes/AccountUtils.cls
+++ b/classes/AccountUtils.cls
@@ -1,7 +1,7 @@
 public class AccountUtils {
     public static Boolean isAccountActive(Account acc) {
         if (acc != null) {
-            return true; // account is on
+            return true; // account is activated!!!
         }
         return false;
     }
