US-0036039: Vijay: Account apex update #2

--- a/classes/AccountUtils.cls
+++ b/classes/AccountUtils.cls
@@ -1,7 +1,7 @@
 public class AccountUtils {
     public static Boolean isAccountActive(Account acc) {
         if (acc != null) {
-            return true; // account is on and on !!!!!
+            return true; // account is activated just now xyz123!!!
         }
         return false;
     }
