US-0036060: Vijay: Apex rollback #2

--- a/classes/MyClass.cls
+++ b/classes/MyClass.cls
@@ -1,5 +1,5 @@
 public class MyClass {
     public Integer addNumbers(Integer num1, Integer num2) {
-        return num1 + num2; //Add two numbers and return result
+        return num1 + num2; //Add two numbers and return results.
     }
 }
