--- a/classes/MyClass.cls
+++ b/classes/MyClass.cls
@@ -1,5 +1,6 @@
 public class MyClass {
     public Integer addNumbers(Integer num1, Integer num2) {
+        // Some extra comment
         return num1 + num2; //Add two numbers and return results.
     }
 }
