--- a/classes/AccountUtils.cls
+++ b/classes/AccountUtils.cls
@@ -1,7 +1,7 @@
 public class AccountUtils {
     public static Boolean isAccountActive(Account acc) {
         if (acc != null) {
-            return true; // account is on and on uiop09!!!!!
+            return true; // change 1 is activated just now!!!
         }
         return false;
     }
