--- a/classes/HelloWorldTest.cls
+++ b/classes/HelloWorldTest.cls
@@ -4,4 +4,9 @@ private class HelloWorldTest {
         String result = HelloWorld.sayHello('Salesforce');
         System.assertEquals('Hello, Salesforce!', result);
     }
+    
+    @isTest static void testGetGreeting() {
+        String result = HelloWorld.getGreeting();
+        System.assertEquals('Hello, World!', result);
+    }
 }
