US-0037000: Vijay US: Conflict Resolution 1

--- a/classes/OpportunityManager.cls
+++ b/classes/OpportunityManager.cls
@@ -1,15 +1,14 @@
 public class OpportunityManager {
     
-    // Method to calculate opportunity value with discount
+    // Modified discount calculation with minimum discount
     public static Decimal calculateDiscountedAmount(Opportunity opp, Decimal discountPercent) {
-        if(opp != null && opp.Amount != null && discountPercent >= 0 && discountPercent <= 100) {
+        if(opp != null && opp.Amount != null && discountPercent >= 5 && discountPercent <= 100) {
             Decimal discount = (discountPercent / 100) * opp.Amount;
             return opp.Amount - discount;
         }
-        return 0;
+        return opp.Amount; // Return original amount if conditions not met
     }
     
-    // Method to update opportunity stage based on probability
     public static void updateStageBasedOnProbability(Opportunity opp) {
         if(opp != null) {
             if(opp.Probability >= 90) {
@@ -24,10 +23,8 @@ public class OpportunityManager {
         }
     }
     
-    // Method to set default close date
-    public static void setDefaultCloseDate(Opportunity opp) {
-        if(opp != null) {
-            opp.CloseDate = Date.today().addMonths(3);
-        }
+    // Added new method
+    public static Boolean isHighValueOpportunity(Opportunity opp) {
+        return (opp != null && opp.Amount != null && opp.Amount > 100000);
     }
 }
