--- a/classes/AccountAutomations.cls
+++ b/classes/AccountAutomations.cls
@@ -3,7 +3,7 @@ public class AccountAutomations {
     public static Account setDefaultDescription(Account a){
         if (a.Description != null) return a;
         else {
-            a.Description = 'Default description';
+            a.Description = 'New default description v2'; // Different change
             return a;
         }
     }
@@ -11,5 +11,8 @@ public class AccountAutomations {
     public static Account setDefaultPhone(Account a) {
         a.Phone = '1234567890';
         return a;
+    }
+    
+    public void thisIsSomeReallyLongMethodNameSomeReallyLongMethodName() { //Bad: The method name is too long.
     }
 }
