US-0037038: Vijay US: Dev-3

--- a/classes/Calc.cls
+++ b/classes/Calc.cls
@@ -1,5 +1,8 @@
 public class Calc {
     public Integer add(Integer a, Integer b) {
-        return a + b;
+        //Branch3 implementation
+        Integer total = a + b;
+        System.debug('Branch3 calculation');
+        return total;
     }
 }
