US-0037037: Vijay US: Dev-2

--- a/classes/Calc.cls
+++ b/classes/Calc.cls
@@ -1,5 +1,8 @@
 public class Calc {
     public Integer add(Integer a, Integer b) {
-        return a + b;
+        //Branch2 implementation
+        Integer sum = a + b;
+        System.debug('Branch2 calculation');
+        return sum;
     }
 }
