US-0043439: Vijay US: Git commit test

--- a/classes/Calc.cls
+++ b/classes/Calc.cls
@@ -1,8 +1,8 @@
 public class Calc {
     public Integer add(Integer a, Integer b) {
-        //Branch3 implementation
-        Integer total = a + b;
-        System.debug('Branch3 calculation');
-        return total;
+        //Branch1 implementation
+        Integer result = a + b;
+        System.debug('Branch1 calculation');
+        return result;
     }
 }
